--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     crossorigin="anonymous"></script>
 
   <!-- For JS: -->
-  <link rel="stylesheet" href="D:\prg\HTML\TinDog-Start-master\TinDog-Start-master\css\styles.css">
+  <link rel="stylesheet" href="css\styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
