--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Geeks For Geeks NGO</title>
-  <link rel="icon" type="image/x-icon" href="D:\prg\HTML\TinDog-Start-master\TinDog-Start-master\favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- For CSS: -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -35,7 +35,7 @@
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href=""><img src="unnamed.jpg" class="logo"></a>
+        <a class="navbar-brand" href=""><img src="images/unnamed.jpg" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -120,13 +120,13 @@
           <div class="carousel-item active">
             <h2>I no longer wander in the Forest regretting my poverty. Instead I now participate in ROBOCONS. Thank you
               Geeks for Geeks for giving me resources. </h2>
-            <img src="c1.jpg" alt="dog-profile">
+            <img src="https://media.discordapp.net/attachments/825429867130257488/972206969958072350/c1.jpg?width=671&height=671" alt="dog-profile">
             <em>Jonathan, Hogsback,South Africa</em>
           </div>
           <div class="carousel-item">
             <h2 class="testimonial-text">I used to jack cars in my neighbourhood, but now I do freelancing. I make
               montages and Vlogs. GeeksForGeeks is helping me to learning ethical hacking and cybersecurity.</h2>
-            <img class="testimonial-image" src="c2.jpg" alt="lady-profile">
+            <img class="testimonial-image" src="https://i.ibb.co/sHqSYL3/c2.png" alt="lady-profile">
             <em>Jill Braithwate, Waterberg</em>
           </div>
         </div>
@@ -244,7 +244,7 @@
 
         <div class="pc col lg-4 md-6">
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="D:\prg\HTML\TinDog-Start-master\TinDog-Start-master\S.png"
+            <img class="card-img-top" src="https://i.ibb.co/ZXhfXyY/S.png"
               alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Minimalist portfolio website</h5>
