--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href=""><img src="images/unnamed.jpg" class="logo"></a>
+        <a class="navbar-brand" href=""><img src="https://i.ibb.co/G097djc/unnamed.jpg" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
