--- a/joining-form.html
+++ b/joining-form.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="D:\prg\HTML\TinDog-Start-master\TinDog-Start-master\css\form1.css">
+<link rel="stylesheet" href="css\form1.css">
 
     <div class="wrapper">
         <div class="title">
